wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  label:
  app: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
